added hovered class

--- a/index.html
+++ b/index.html
@@ -36,22 +36,27 @@
         <div class="gallery_content_item">
           <img src="./assets/gallery_1.jpeg" alt="nature" />
           <h3>Príroda</h3>
+          <p>6 fotiek</p>
         </div>
         <div class="gallery_content_item">
           <img src="./assets/gallery_2.jpeg" alt="nature" />
           <h3>Architektúra</h3>
+          <p>6 fotiek</p>
         </div>
         <div class="gallery_content_item">
           <img src="./assets/gallery_3.jpg" alt="nature" />
           <h3>Ľudia</h3>
+          <p>6 fotiek</p>
         </div>
         <div class="gallery_content_item">
           <img src="./assets/gallery_4.jpg" alt="nature" />
           <h3>Jedlo</h3>
+          <p>6 fotiek</p>
         </div>
         <div class="gallery_content_item">
           <img src="./assets/gallery_5.jpeg" alt="nature" />
           <h3>Autá</h3>
+          <p>6 fotiek</p>
         </div>
         <div id="backdropOpen" class="gallery_content_item">
           <div class="gallery_content_item_add_category_plus">+</div>
